--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start -p 8000",
-    "lint": "next lint",
+    "lint": "tsc && next lint",
     "cypress": "cypress open",
     "analyze": "ANALYZE=true next build",
     "storybook": "start-storybook -p 6006",
