--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-country-flag": "^3.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
+    "react-hot-toast": "^2.4.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "react-query": "^3.34.16",
