--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "medusa-react": "^0.3.4",
     "next": "^12.2.0",
+    "qrcode.react": "^3.1.0",
     "react": "17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "17.0.2",
