--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "cypress/support/index.js",
     "cypress/support/commands.js",
     "cypress/integration/product.spec.js",
-    "cypress/plugins/index.js",
+    "cypress/plugins/index.js"
   ],
   "exclude": [
     "node_modules",
@@ -37,6 +37,7 @@
     ".nyc_output",
     "cypress-coverage",
     "coverage",
-    "jest-coverage"
+    "jest-coverage",
+    "**/stories/"
   ]
 }
