--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "medusa-react": "^0.3.4",
-    "next": "^12.2.0",
+    "next": "^13.2.4",
     "qrcode.react": "^3.1.0",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.30.0",
     "react-hot-toast": "^2.4.0",
     "react-instantsearch-hooks-web": "^6.29.0",
