--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "medusa-next",
-  "version": "1.0.2",
+  "name": "zaytan-starter-plan-store-demo",
+  "version": "1.0.0",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> (https://www.medusajs.com)",
+  "author": "Aung Myo Myat",
   "description": "Next.js starter to be used with Medusa server",
-  "keywords": [
-    "medusa-storefront"
-  ],
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
